--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -57,7 +57,7 @@
         position: absolute;
         top: 78px;
         left: 0;
-        z-index: 9999;
+        z-index: 9999999;
         width: 100%;
         max-width: 276px;
         background-color: #2A2A2A;
